--- a/schedule.html
+++ b/schedule.html
@@ -2,7 +2,7 @@
 <head>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-    <title>Галерея</title>
+    <title>Розклад</title>
 </head>
 <body>
     <div class="menu">
