--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="menu">
-        <img src="resources/logo.png" width=96>
+        <img src="resources/logo.webp" width=96>
         <h1>Вінницький залізничний вокзал</h1>
         <ol class="menulist">
             <li class="menulist"><a href="index.html">Головна</a></li>
@@ -16,17 +16,17 @@
         </ol>
     </div>
     <div class="main">
-<p></p><img src="resources/frontfull.png"><p></p>
-<img src="resources/insidecenter.png"><p></p>
-<img src="resources/waitingroom.png"><p></p>
-<img src="resources/tickets.png"><p></p>
-<img src="resources/downentrance.png"><p></p>
-<img src="resources/underground.png"><p></p>
-<img src="resources/behindleft.png"><p></p>
-<img src="resources/behindright.png"><p></p>
-<img src="resources/behindclose.png"><p></p>
-<img src="resources/downexit.png"><p></p>
-<img src="resources/animation.gif" width=50%>
+<p></p><img src="resources/frontfull.webp"><p></p>
+<img src="resources/insidecenter.webp"><p></p>
+<img src="resources/waitingroom.webp"><p></p>
+<img src="resources/tickets.webp"><p></p>
+<img src="resources/downentrance.webp"><p></p>
+<img src="resources/underground.webp"><p></p>
+<img src="resources/behindleft.webp"><p></p>
+<img src="resources/behindright.webp"><p></p>
+<img src="resources/behindclose.webp"><p></p>
+<img src="resources/downexit.webp"><p></p>
+<img src="resources/animation.webp" width=50%>
 <p></p>
     </div>
 </body>
