--- a/history.html
+++ b/history.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="menu">
-        <img src="resources/logo.png" width=96>
+        <img src="resources/logo.webp" width=96>
         <h1>Вінницький залізничний вокзал</h1>
         <ol class="menulist">
             <li class="menulist"><a href="index.html">Головна</a></li>
@@ -23,7 +23,7 @@
 <p>Завдяки залізниці, через 40 років місто збільшилося втричі та стало першим за товарообігом в Подільській губернії. Нову будівлю вокзалу зведено наприкінці XIX століття за зразком неоготичного архітектурного стилю. Особливістю споруди став дах з так званими «щипцями» — верхньою трикутною частиною стіни, обмеженою двома схилами даху і не відокремленої знизу карнизом.</p>
 
 <p>У 1940 році зведена й введена в експлуатацію двоповерхова будівля залізничного вокзалу (будівництво тривало майже 6 років). Під час німецько-радянської війни будівля вокзалу під час бойових дій була вщент зруйнована. 1952 року на її місці відновлена будівля залізничного вокзалу, яка збереглася і понині.</p>
-<img src="resources/animation.gif" width=50%>
+<img src="resources/animation.webp" width=50%>
 <p></p>
     </div>
 </body>
