--- a/schedule.html
+++ b/schedule.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="menu">
-        <img src="resources/logo.png" width=96>
+        <img src="resources/logo.webp" width=96>
         <h1>Вінницький залізничний вокзал</h1>
         <ol class="menulist">
             <li class="menulist"><a href="index.html">Головна</a></li>
@@ -167,7 +167,7 @@
      </tr>
      </table>
      <p>Замовити квитки можливо як офлайн на одній з кас в приміщенні вокзалу, так і онлайн на <a href="https://booking.uz.gov.ua/">сайті Укрзалізниці</a>.</p>
-     <img src="resources/tickets.png">
+     <img src="resources/tickets.webp">
      <p></p>
     </div>
 </body>
