--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="menu">
-        <img src="resources/logo.png" width=96>
+        <img src="resources/logo.webp" width=96>
         <h1>Вінницький залізничний вокзал</h1>
         <ol class="menulist">
             <li class="menulist"><b>Головна</b></li>
@@ -18,13 +18,13 @@
     <div class="main">
 
     <p>Вінницький залізничний вокзал розташований за адресою пл. Привокзальна, 1, є вокзалом вузлової вантажної залізничної станції 1-го класу Жмеринської дирекції Південно-Західної залізниці.</p>
-<img src="resources/frontfull.png">
+<img src="resources/frontfull.webp">
 <p>На вокзалі працює вестибюль, зала очікування (звичайного і підвищеного комфорту), платний і безкоштовний туалети, автоматичні та стаціонарні камери схову, багажне відділення, а також сервіс-центр і довідкове бюро.</p>
-<img src="resources/insidecenter.png"><p></p>
-<img src="resources/waitingroom.png">
+<img src="resources/insidecenter.webp"><p></p>
+<img src="resources/waitingroom.webp">
 <p>На станції Вінниця функціонує підземний перехід, система гучномовного оголошення. Станція Вінниця має 3 пасажирські платформи: № 1 (колія № 3), № 2 (колії № 1 і № 2), № 3 (колія № 4). Платформа № 1 з правої сторони вокзалу оснащена турнікетами. Через них необхідно пройти, щоб потрапити на приміські електропоїзди, що унеможливлює безквитковий проїзд.</p>
-<img src="resources/underground.png"><p></p>
-<img src="resources/behindright.png"><p></p>
+<img src="resources/underground.webp"><p></p>
+<img src="resources/behindright.webp"><p></p>
     </div>
 </body>
 </html>
